<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emergency"
        android:textColor="@color/merah"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textColor="#0E0E0E"
        android:layout_above="@id/fullName"
        android:textSize="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"/>

    <EditText
        android:id="@+id/fullName"
        android:layout_width="396dp"
        android:layout_height="41dp"
        android:background="@color/merah"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:layout_centerVertical="true"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"/>

    <EditText
        android:id="@+id/Email"
        android:layout_width="396dp"
        android:layout_height="41dp"
        android:background="@color/merah"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="#F8F4F4"
        android:textColorHint="#F1EBEB"
        android:layout_below="@id/fullName"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/Password"
        android:layout_width="396dp"
        android:layout_height="41dp"
        android:background="@color/merah"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#F8F4F4"
        android:textColorHint="#F1EBEB"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/Email"/>

    <Button
        android:id="@+id/Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_below="@id/Password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/createText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account_login_here"
        android:textColor="#090909"
        android:layout_below="@id/Register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

</RelativeLayout>